Closed Bug 1348322 Opened 8 years ago Closed 8 years ago

Fix the initial values of gVelocityCurveFunction

Categories

(Core :: Panning and Zooming, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox52 --- wontfix
firefox53 --- wontfix
firefox54 --- fixed
firefox55 --- fixed

People

(Reporter: boris, Assigned: boris)

References

Details

(Whiteboard: [gfx-noted])

Attachments

(1 file)

The initial values of gVelocityCurveFunction [1] are not correct. They should be X1, Y1, X2, Y2. [1] http://searchfox.org/mozilla-central/rev/006005beff40d377cfd2f69d3400633c5ff09127/gfx/layers/apz/src/AsyncPanZoomController.cpp#680-684
Assignee: nobody → boris.chiou
Depends on: 1091049
Comment on attachment 8848552 [details] Bug 1348322 - Fix the initial values of gVelocityCurveFunction. https://reviewboard.mozilla.org/r/121458/#review123498 Thanks! Please make sure the try push is green before landing, there's a risk this might affect some of the gtests or APZ mochitests.
Attachment #8848552 - Flags: review?(bugmail) → review+
Component: Graphics → Panning and Zooming
Priority: -- → P2
Whiteboard: [gfx-noted]
Pushed by bchiou@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/110af17e4c5e Fix the initial values of gVelocityCurveFunction. r=kats
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Should we consider this fix for beta54?
Flags: needinfo?(boris.chiou)
For the record, I would be in favour of uplifting, since it's a small patch. Nobody has reported any negative impact on scrolling behaviour from this fix.
(In reply to Kartikaya Gupta (email:kats@mozilla.com) from comment #6) > For the record, I would be in favour of uplifting, since it's a small patch. > Nobody has reported any negative impact on scrolling behaviour from this fix. Yes. Let's uplift it.
Flags: needinfo?(boris.chiou)
Comment on attachment 8848552 [details] Bug 1348322 - Fix the initial values of gVelocityCurveFunction. Approval Request Comment [Feature/Bug causing the regression]: Bug 1091049 [User impact if declined]: Right now there is no feedback reply. [Is this code covered by automated tests?]: No. This is a small patch to fix the initial value. No automated tests cover this now. [Has the fix been verified in Nightly?]: Yes. [Needs manual test from QE? If yes, steps to reproduce]: No. [List of other uplifts needed for the feature/fix]: Only this one. [Is the change risky?]: No. This is a small patch and a bug fix. [Why is the change risky/not risky?]: It is very simple, and only make the initial value be correct. [String changes made/needed]: No.
Attachment #8848552 - Flags: approval-mozilla-beta?
Comment on attachment 8848552 [details] Bug 1348322 - Fix the initial values of gVelocityCurveFunction. A minor fix. Beta54+. Should be in 54 beta 1.
Attachment #8848552 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
(In reply to Boris Chiou [:boris] from comment #8) > [Is this code covered by automated tests?]: No. This is a small patch to fix > the initial value. No automated tests cover this now. > [Has the fix been verified in Nightly?]: Yes. > [Needs manual test from QE? If yes, steps to reproduce]: No. Setting qe-verify- based on Boris' assessment on manual testing needs.
Flags: qe-verify-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: