Bug 1348322 - Fix the initial values of gVelocityCurveFunction. r=kats, a=gchang

MozReview-Commit-ID: LDWCeRC4JBH